--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Fun Bus Travel Agency - Solution</title>
+  <title>Guider Project</title>
 
   <link href="https://fonts.googleapis.com/css?family=Trade+Winds&display=swap" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
